--- a/SimpleGlass/src/main/AndroidManifest.xml
+++ b/SimpleGlass/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
     <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
 
@@ -18,7 +19,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.mirror.android.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
