Require the Google APIs Client Library as a maven dependency.

--- a/libraries/GooglePlayServices/build.gradle
+++ b/libraries/GooglePlayServices/build.gradle
@@ -3,10 +3,12 @@ buildscript {
         maven { url 'http://repo1.maven.org/maven2' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.4'
+        classpath 'com.android.tools.build:gradle:0.4.2'
     }
 }
 apply plugin: 'android-library'
+
+archivesBaseName = 'GooglePlayServices'
 
 dependencies {
     compile files('libs/google-play-services.jar')
