--- a/mirror-quickstart-android/build.gradle
+++ b/mirror-quickstart-android/build.gradle
@@ -3,14 +3,31 @@ buildscript {
         maven { url 'http://repo1.maven.org/maven2' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.4'
+        classpath 'com.android.tools.build:gradle:0.4.2'
     }
 }
 apply plugin: 'android'
 
+repositories {
+    mavenCentral()
+}
+
+configurations {
+    compile.exclude module: 'xpp3'
+    compile.exclude module: 'httpclient'
+    compile.exclude module: 'junit'
+    compile.exclude module: 'android'
+    compile.exclude module: 'google-play-services'
+}
+
 dependencies {
     compile project(':libraries:GooglePlayServices')
     compile files('libs/android-support-v4.jar')
+
+    // Require the Google APIs Client Library
+    compile 'com.google.api-client:google-api-client:1.15.0-rc'
+    compile 'com.google.api-client:google-api-client-android:1.15.0-rc'
+    compile 'com.google.apis:google-api-services-mirror:v1-rev11-1.15.0-rc'
 }
 
 android {
